--- a/calculate.html
+++ b/calculate.html
@@ -45,7 +45,7 @@
 
     <table class="boxround">
         <tr style="text-align: center;">
-            <th>Amount of Cookies : <input type="number" value="" id="amount" class="text"></th>
+            <th>Amount of Cookies : <input type="number" value="12" id="amount" class="text"></th>
         </tr>
         <tr style="text-align: center;">
             <th><br><input type="button" value="Calculate" class="fakebutton" onclick="calculate()"></th>
