--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
     <h1>About</h1>
 
     <table class="tata">
+        <tr style="color: red;">
+            <th>rosak pulak css kat website ni</th>
+        </tr>
         <tr>
             <th>Welcome to my cookie calculator website! This website is a tool for baking with exact quantity of your choice. The website will calculate how much ingredient you exactly need simply by putting how much cookies. By using my website, you can save your time and reduce your calculating work.</th>
         </tr>
